--- a/vintage_night.css
+++ b/vintage_night.css
@@ -1,92 +1,47 @@
 :root {
-    --bg-color: #131313;
+    --bg-color: white;
     /*change background*/
-    --text-color: #eeffff;
+    --text-color: black;
     /*change text color*/
     --md-char-color: #C7C5C5;
     /*change color of meta characetrs like `*` in markdown */
     --meta-content-color: #5b808d;
     /*change color of meta contents like image text or link address in markdown */
 
-	--focus-ring-color: #ee8241;
-    --primary-color: #ee8241;
+    --primary-color: #428bca;
     /* color of primary buttons */
     --primary-btn-border-color: #285e8e;
-    --primary-btn-text-color: #131313;
+    --primary-btn-text-color: #fff;
 
-    --window-border: 1px solid #131313;
+    --window-border: 1px solid #eee;
     /*border for sidebar, etc*/
 
-    --active-file-bg-color: #333333;
+    --active-file-bg-color: #eee;
     /*background color if list item in file tree or file list*/
     --active-file-text-color: inherit;
     --active-file-border-color: #777;
 
-    --side-bar-bg-color: #222222;
+    --side-bar-bg-color: var(--bg-color);
     /*change background of sidebar*/
-    --item-hover-bg-color: rgba(100, 100, 100, 0.59);
+    --item-hover-bg-color: rgba(229, 229, 229, 0.59);
     /*background of control items when hover, like menu in sidebar*/
     --item-hover-text-color: inherit;
     --monospace: monospace;
     /*monospace font for codes, fences*/
-
-	--select-text-bg-color: #ee8241;
+    --strong-weight: 900;
+    --strong-font: Charter, Times, "Songti SC", "思源宋体 CN", "黑体", "宋体" 
 }
 
 
 /***************** 这里定义一些全局信息****************/
-/* header */
-.megamenu-opened header {
-	background-image: none;
-	background: #131313 !important;
-}
-
-/* sidebar */
-.stopselect {
-	background: #131313 !important;
-}
-
-.megamenu-content {
-	background: #131313 !important;
-}
-
-.recent-file-name {
-	background: #222222;
-}
-
-.recent-file-dir {
-	background: #222222;
-}
-
-#recent-file-panel-action-btn {
-	background: #222222;
-}
 
 html,
-body {
-    background: #131313;
-    font-family: 'Times New Roman', 宋体;
+body,
+#write {
+    background: white;
+    font-family: 'Charter','Times New Roman', "Songti SC", "SimSong", 思源宋体 CN, 黑体;
     font-weight: normal;
     max-width: 55rem;
-}
-
-#write {
-    max-width: 860px;
-  	margin: 0 auto;
-  	padding: 30px;
-    padding-bottom: 100px;
-}
-
-@media only screen and (min-width: 1400px) {
-	#write {
-		max-width: 1024px;
-	}
-}
-
-@media only screen and (min-width: 1800px) {
-	#write {
-		max-width: 1200px;
-	}
 }
 
 body {
@@ -97,29 +52,16 @@ html {
     font-size: 18px;
 }
 
-
-/************************* misc ************************/
-/* 源代码模式的按键 */
-.typora-sourceview-on #toggle-sourceview-btn {
-    background: #131313;
+strong {
+    font-family: var(--strong-font);
+    font-weight: var(--strong-weight);
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: #888888;
+#write {
+    margin: auto;
+    text-align: justify;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: #888888;
-}
-
-::-webkit-scrollbar-thumb:active {
-    background-color: #888888;
-}
-
-::selection {
-  color: #131313 !important;
-  background: #ee8241 !important;
-}
 
 /***************** 这里定义水平线的样式 ****************/
 
@@ -129,28 +71,28 @@ hr {
     color: #333;
 }
 
+
 /***************** 这里定义脚注的样式 ****************/
 
-#write sup[md-inline="footnote"] {
-    background-color: #131313;
-    color: #888888;
+sup[md-inline="footnote"] {
+    background-color: white;
     font-size: 0.8rem;
     padding: 0;
 }
 
-#write sup[md-inline="footnote"]:before {
+sup[md-inline="footnote"]:before {
     content: '[';
 }
 
-#write sup[md-inline="footnote"]:after {
+sup[md-inline="footnote"]:after {
     content: ']';
 }
 
 
 /***************** 这里定义链接的样式 ****************/
 
-#write a {
-    color: #888888;
+a {
+    color: #285e8e;
 }
 
 /***************** 这里定义ToC的样式 ****************/
@@ -160,12 +102,12 @@ hr {
 } */
 
 .md-toc-content {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     counter-reset: h1toc;
 }
 
 .md-toc-h1 {
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 黑体;
     margin-left: 0;
     font-size: 1rem;
     counter-reset: h2toc;
@@ -200,67 +142,67 @@ hr {
     font-size: 1rem;
 }
 
-/* .md-toc-h1:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h1toc; */
-/*     content: counter(h1toc) "  " */
-/* } */
+/*.md-toc-h1:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h1toc;
+    content: counter(h1toc) "  "
+}*/
 
 .md-toc-h1 .md-toc-inner {
     margin-left: 0;
 }
 
-/* .md-toc-h2:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h2toc; */
-/*     content: counter(h1toc) ". "counter(h2toc) "  " */
-/* } */
+/*.md-toc-h2:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h2toc;
+    content: counter(h1toc) ". "counter(h2toc) "  "
+}*/
 
 .md-toc-h2 .md-toc-inner {
     margin-left: 0;
 }
 
-/* .md-toc-h3:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h3toc; */
-/*     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) "  " */
-/* } */
+/*.md-toc-h3:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h3toc;
+    content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) "  "
+}*/
 
 .md-toc-h3 .md-toc-inner {
     margin-left: 0;
 }
 
-/* .md-toc-h4:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h4toc; */
-/*     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) "  " */
-/* } */
+/*.md-toc-h4:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h4toc;
+    content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) "  "
+}*/
 
 .md-toc-h4 .md-toc-inner {
     margin-left: 0;
 }
 
-/* .md-toc-h5:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h5toc; */
-/*     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) "  " */
-/* } */
+/*.md-toc-h5:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h5toc;
+    content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) "  "
+}*/
 
 .md-toc-h5 .md-toc-inner {
     margin-left: 0;
 }
 
-/* .md-toc-h6:before { */
-/*     color: #285e8e; */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h6toc; */
-/*     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) ". "counter(h6toc) "  " */
-/* } */
+/*.md-toc-h6:before {
+    color: #285e8e;
+    white-space: pre-wrap;
+    counter-increment: h6toc;
+    content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) ". "counter(h6toc) "  "
+}*/
 
 .md-toc-h6 .md-toc-inner {
     margin-left: 0;
@@ -350,104 +292,33 @@ hr {
 /***************** 这里定义YAML头部的样式 ****************/
 
 #write pre.md-meta-block {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     padding: 1rem;
     font-size: 85%;
     line-height: 1.45;
-    background-color: #303030;
+    background-color: #f7f7f7;
     border: 0;
     border-radius: 3px;
-    color: #eeffff;
+    color: #777777;
     margin-top: 0 !important;
 }
 
 
 /***************** 这里定义代码的样式 ****************/
 
-/* xml-tag */
-#write span .cm-tag {
-	color: #ee8241;
-}
-
-/* sudo in bash */
-#write span .cm-builtin {
-	color: #ee8241;
-}
-
-/* attribute in bash */
-#write span .cm-attribute {
-	color: #f7397d;
-}
-
-#write span .cm-variable {
-	color: #eeffff;
-}
-
-#write span .cm-meta {
-	color: #f7397d;
-}
-
-#write span .cm-variable-3 {
-	color: #ee8241;
-}
-
-#write span .cm-keyword {
-	color: #f7397d;
-}
-
-#write span .cm-def {
-	color: #abd166;
-}
-
-#write span .cm-comment {
-	color: #c99677;
-}
-
-#write span .cm-string {
-	color: #c99677;
-}
-
-/* true or false */
-#write span .cm-atom {
-	color: #c99677;
-}
-
-#write span .cm-operator {
-	color: #9cdcfe;
-}
-
-#write span .cm-number {
-	color: #b5cea8;
-}
-
-/* inline code in quote */
-.md-pair-s > code{
-	background-color: #303030 !important;
-}
-
-#write code {
-    font-family: 'UbuntuMono Nerd Font', 宋体;
+code {
+    font-family: monospace, 'Consolas', 思源宋体 CN;
     padding: .1rem;
-    color: #eeffff;
-    background: #131313;
+    background: #f0f0f0;
     font-size: 0.9rem;
     margin-left: 0.15rem;
     margin-right: 0.15rem;
 }
 
-.CodeMirror div.CodeMirror-cursor {
-	border-left: 1px solid #eeffff !important;
-}
-
-.CodeMirror-selectedtext {
-	color: #131313 !important;
-}
-
-#write .md-fences {
-    font-family: 'UbuntuMono Nerd Font';
-    color: "#eeffff";
-    border: 1px solid #666;
-    background-color: #222;
+.md-fences {
+    font-family: monospace, 'Consolas';
+    border: 1px solid #e7eaed;
+    background-color: #f8f8f8;
     border-radius: 3px;
     padding: 0;
     padding: 2px 4px 0px 4px;
@@ -462,7 +333,7 @@ hr {
 /***************** 这里定义大纲的样式 ****************/
 
 .outline-item {
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN, 黑体;
     font-size: 0.8rem;
     line-height: 1.35;
 }
@@ -499,35 +370,35 @@ hr {
     counter-reset: toch6
 }
 
-/* .outline-h1>.outline-item>.outline-label:before { */
-/*     counter-increment: toch1; */
-/*     content: counter(toch1) " " */
-/* } */
-/**/
-/* .outline-h2>.outline-item>.outline-label:before { */
-/*     counter-increment: toch2; */
-/*     content: counter(toch1) "."counter(toch2) " " */
-/* } */
-/**/
-/* .outline-h3>.outline-item>.outline-label:before { */
-/*     counter-increment: toch3; */
-/*     content: counter(toch1) "."counter(toch2) "."counter(toch3) " " */
-/* } */
-/**/
-/* .outline-h4>.outline-item>.outline-label:before { */
-/*     counter-increment: toch4; */
-/*     content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) " " */
-/* } */
-/**/
-/* .outline-h5>.outline-item>.outline-label:before { */
-/*     counter-increment: toch5; */
-/*     content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) "."counter(toch5) " " */
-/* } */
-/**/
-/* .outline-h6>.outline-item>.outline-label:before { */
-/*     counter-increment: toch6; */
-/*     content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) "."counter(toch5) "."counter(toch6) " " */
-/* } */
+/*.outline-h1>.outline-item>.outline-label:before {
+    counter-increment: toch1;
+    content: counter(toch1) " "
+}
+
+.outline-h2>.outline-item>.outline-label:before {
+    counter-increment: toch2;
+    content: counter(toch1) "."counter(toch2) " "
+}
+
+.outline-h3>.outline-item>.outline-label:before {
+    counter-increment: toch3;
+    content: counter(toch1) "."counter(toch2) "."counter(toch3) " "
+}
+
+.outline-h4>.outline-item>.outline-label:before {
+    counter-increment: toch4;
+    content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) " "
+}
+
+.outline-h5>.outline-item>.outline-label:before {
+    counter-increment: toch5;
+    content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) "."counter(toch5) " "
+}
+
+.outline-h6>.outline-item>.outline-label:before {
+    counter-increment: toch6;
+    content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) "."counter(toch5) "."counter(toch6) " "
+}*/
 
 .outline-h4,
 .outline-h5,
@@ -545,42 +416,26 @@ hr {
 #write h5,
 #write h6 {
     font-weight: normal;
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 黑体;
 }
 
 #write h1 {
     font-size: 1.5rem;
-    font-family: 'Helvetica', 黑体;
-    color: #ffffff;
+    color: black;
     text-align: center;
     margin-top: 3rem;
     margin-bottom: 1.5rem;
 }
 
 #write h2 {
-    font-family: 'Helvetica', 黑体;
-    font-size: 1rem;
-    color: #ee8241;
-    /* text-decoration:  overline; */
+    font-size: 1.2rem;
+    color: #285e8e;
     margin-top: 1rem;
     margin-bottom: 0.75rem;
 }
 
-/* 分割线 horizental line */
-#write h2:after {
-  content: "";
-  height: 1px;
-  width: 100%;
-  background-color: #ee8241;
-  position: absolute;
-  bottom: -.2em;
-  left: 50%;
-  transform: translate(-50%);
-}
-
 #write h3 {
-    font-family: 'Helvetica', 黑体;
-    color: #ee8241;
+    color: brown;
     font-size: 1rem;
     margin-top: 0.75rem;
     margin-bottom: 0.5rem;
@@ -589,13 +444,11 @@ hr {
 #write h4,
 #write h5,
 #write h6 {
-    font-family: 'Helvetica', 黑体;
     color: black;
     font-size: 1rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
-
 
 /***************** 这里定义列表的样式 ****************/
 
@@ -614,7 +467,7 @@ li {
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.25rem;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
 }
 
 /*working for PDF nothing, for Typora only for text*/
@@ -622,7 +475,7 @@ li p {
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.25rem;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
 }
 
 ul,
@@ -634,7 +487,7 @@ ol {
 /***************** 这里定义段落的样式 ****************/
 
 p {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.5rem 0 0.5rem 0;
@@ -653,7 +506,7 @@ img {
 
 blockquote {
     border-left: 5px solid #666;
-    background-color: #303030;
+    background-color: #f0f0f0;
     margin-top: 0.75rem;
     margin-left: 0.375rem;
     margin-right: 0.375rem;
@@ -661,7 +514,7 @@ blockquote {
 }
 
 blockquote p {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 'Kaiti SC', 思源宋体 CN;
     padding: 0.25rem 0.5rem;
     font-size: 1rem;
     line-height: 1.75;
@@ -670,36 +523,27 @@ blockquote p {
 
 
 /***************** 这里定义表格的样式 ****************/
-/* 表格内的文字 */
-table span .md-plain {
-    color: #aaaaaa;
-}
-
-strong span {
-    color: #9cdcfe !important;
-}
 
 table {
     position: relative;
-    font-family: 'Times New Roman', 宋体;
-    color: #aaaaaa;
-    width: 80%;
-    left: 10%;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
+    width: 70%;
+    left: 15%;
     *border-collapse: collapse;
     border-spacing: 0;
-    border-top: solid #777777 3px;
-    border-bottom: solid #777777 3px;
+    border-top: solid black 2px;
+    border-bottom: solid black 2px;
 }
 
 table thead th {
-    border-bottom: 3px double #777777;
+    border-bottom: 3px double black;
 }
 
 
 /***************** 这里定义公式的样式 ****************/
 
-/* .MathJax_Display {
-    font-size: 0.9rem;
+ .MathJax_Display {
+    font-size: 0.95rem;
     margin-top: 0.5rem;
     margin-bottom: 0;
 }
@@ -712,7 +556,7 @@ p.mathjax-block,
 .mathjax-block>.code-tooltip {
     bottom: 5px;
     box-shadow: none;
-} */
+} 
 
 
 /***************** 这里定义节编号的样式 ****************/
@@ -742,69 +586,79 @@ p.mathjax-block,
 }
 
 /** put counter result into headings */
-/* #write h1:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h1; */
-/*     content: counter(h1) "   "; */
-/* } */
-/**/
-/* #write h2:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h2; */
-/*     content: counter(h1) "."counter(h2) "  " */
-/* } */
-/**/
-/* #write h3:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h3; */
-/*     content: counter(h1) "."counter(h2) "."counter(h3) "  " */
-/* } */
-/**/
-/* #write h4:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h4; */
-/*     content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "  " */
-/* } */
-/**/
-/* #write h5:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h5; */
-/*     content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "."counter(h5) "  " */
-/* } */
-/**/
-/* #write h6:before { */
-/*     white-space: pre-wrap; */
-/*     counter-increment: h6; */
-/*     content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "."counter(h5) "."counter(h6) "  " */
-/* } */
+/* * Disabled */
+/*#write h1:before {
+    white-space: pre-wrap;
+    counter-increment: h1;
+    content: counter(h1) "   ";
+}
+
+#write h2:before {
+    white-space: pre-wrap;
+    counter-increment: h2;
+    content: counter(h1) "."counter(h2) "  "
+}
+
+#write h3:before {
+    white-space: pre-wrap;
+    counter-increment: h3;
+    content: counter(h1) "."counter(h2) "."counter(h3) "  "
+}
+
+#write h4:before {
+    white-space: pre-wrap;
+    counter-increment: h4;
+    content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "  "
+}
+
+#write h5:before {
+    white-space: pre-wrap;
+    counter-increment: h5;
+    content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "."counter(h5) "  "
+}
+
+#write h6:before {
+    white-space: pre-wrap;
+    counter-increment: h6;
+    content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "."counter(h5) "."counter(h6) "  "
+}*/
 
 
 /** focus on heading */
-/* #write>h1.md-focus:before, */
-/* #write>h2.md-focus:before, */
-/* #write>h3.md-focus:before, */
-/* #write>h4.md-focus:before, */
-/* #write>h5.md-focus:before, */
-/* #write>h6.md-focus:before { */
-/*     content: none; */
-/*     /* color: red; */
-/*     border: inherit; */
-/*     position: inherit; */
-/*     left: initial; */
-/*     float: none; */
-/*     top: initial; */
-/*     font-size: inherit; */
-/*     padding-left: inherit; */
-/*     padding-right: inherit; */
-/*     vertical-align: inherit; */
-/*     font-weight: inherit; */
-/*     line-height: inherit; */ */
-/* } */
+#write>h1.md-focus:before,
+#write>h2.md-focus:before,
+#write>h3.md-focus:before,
+#write>h4.md-focus:before,
+#write>h5.md-focus:before,
+#write>h6.md-focus:before {
+    content: none;
+    /* color: red;
+    border: inherit;
+    position: inherit;
+    left: initial;
+    float: none;
+    top: initial;
+    font-size: inherit;
+    padding-left: inherit;
+    padding-right: inherit;
+    vertical-align: inherit;
+    font-weight: inherit;
+    line-height: inherit; */
+}
 
 
 /***************** 这里定义打印或者导出PDF的样式 ****************/
 
 @media print {
+
+    html {
+        font-size: 14px;
+    }
+
+    pre {
+        page-break-inside: avoid;
+        word-wrap: break-word;
+    }
 
     /* for example: */
     .typora-export * {
@@ -819,7 +673,10 @@ p.mathjax-block,
         margin-right: 0mm;
     }
 
-    #write {
+    /* #write {
+        font-size: 8.5px;
+        10.5px
         max-width: 100%;
-    }
+    } 
+    */
 }
