Update my own modifications

--- a/vintage.css
+++ b/vintage.css
@@ -28,6 +28,8 @@
     --item-hover-text-color: inherit;
     --monospace: monospace;
     /*monospace font for codes, fences*/
+    --strong-weight: 900;
+    --strong-font: Charter, Times, "Songti SC", "思源宋体 CN", "黑体", "宋体" 
 }
 
 
@@ -37,7 +39,7 @@ html,
 body,
 #write {
     background: white;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter','Times New Roman', "Songti SC", "SimSong", 思源宋体 CN, 黑体;
     font-weight: normal;
     max-width: 55rem;
 }
@@ -48,6 +50,11 @@ body {
 
 html {
     font-size: 18px;
+}
+
+strong {
+    font-family: var(--strong-font);
+    font-weight: var(--strong-weight);
 }
 
 #write {
@@ -95,12 +102,12 @@ a {
 } */
 
 .md-toc-content {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     counter-reset: h1toc;
 }
 
 .md-toc-h1 {
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 黑体;
     margin-left: 0;
     font-size: 1rem;
     counter-reset: h2toc;
@@ -135,67 +142,67 @@ a {
     font-size: 1rem;
 }
 
-.md-toc-h1:before {
+/*.md-toc-h1:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h1toc;
     content: counter(h1toc) "  "
-}
+}*/
 
 .md-toc-h1 .md-toc-inner {
     margin-left: 0;
 }
 
-.md-toc-h2:before {
+/*.md-toc-h2:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h2toc;
     content: counter(h1toc) ". "counter(h2toc) "  "
-}
+}*/
 
 .md-toc-h2 .md-toc-inner {
     margin-left: 0;
 }
 
-.md-toc-h3:before {
+/*.md-toc-h3:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h3toc;
     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) "  "
-}
+}*/
 
 .md-toc-h3 .md-toc-inner {
     margin-left: 0;
 }
 
-.md-toc-h4:before {
+/*.md-toc-h4:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h4toc;
     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) "  "
-}
+}*/
 
 .md-toc-h4 .md-toc-inner {
     margin-left: 0;
 }
 
-.md-toc-h5:before {
+/*.md-toc-h5:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h5toc;
     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) "  "
-}
+}*/
 
 .md-toc-h5 .md-toc-inner {
     margin-left: 0;
 }
 
-.md-toc-h6:before {
+/*.md-toc-h6:before {
     color: #285e8e;
     white-space: pre-wrap;
     counter-increment: h6toc;
     content: counter(h1toc) ". "counter(h2toc) ". "counter(h3toc) ". "counter(h4toc) ". "counter(h5toc) ". "counter(h6toc) "  "
-}
+}*/
 
 .md-toc-h6 .md-toc-inner {
     margin-left: 0;
@@ -285,7 +292,7 @@ a {
 /***************** 这里定义YAML头部的样式 ****************/
 
 #write pre.md-meta-block {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     padding: 1rem;
     font-size: 85%;
     line-height: 1.45;
@@ -300,7 +307,7 @@ a {
 /***************** 这里定义代码的样式 ****************/
 
 code {
-    font-family: 'Consolas', 宋体;
+    font-family: monospace, 'Consolas', 思源宋体 CN;
     padding: .1rem;
     background: #f0f0f0;
     font-size: 0.9rem;
@@ -309,7 +316,7 @@ code {
 }
 
 .md-fences {
-    font-family: 'Consolas';
+    font-family: monospace, 'Consolas';
     border: 1px solid #e7eaed;
     background-color: #f8f8f8;
     border-radius: 3px;
@@ -326,7 +333,7 @@ code {
 /***************** 这里定义大纲的样式 ****************/
 
 .outline-item {
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN, 黑体;
     font-size: 0.8rem;
     line-height: 1.35;
 }
@@ -363,7 +370,7 @@ code {
     counter-reset: toch6
 }
 
-.outline-h1>.outline-item>.outline-label:before {
+/*.outline-h1>.outline-item>.outline-label:before {
     counter-increment: toch1;
     content: counter(toch1) " "
 }
@@ -391,7 +398,7 @@ code {
 .outline-h6>.outline-item>.outline-label:before {
     counter-increment: toch6;
     content: counter(toch1) "."counter(toch2) "."counter(toch3) "."counter(toch4) "."counter(toch5) "."counter(toch6) " "
-}
+}*/
 
 .outline-h4,
 .outline-h5,
@@ -409,7 +416,7 @@ code {
 #write h5,
 #write h6 {
     font-weight: normal;
-    font-family: 'Times New Roman', 黑体;
+    font-family: 'Charter', 'Times New Roman', 黑体;
 }
 
 #write h1 {
@@ -443,7 +450,6 @@ code {
     margin-bottom: 0.5rem;
 }
 
-
 /***************** 这里定义列表的样式 ****************/
 
 ol li {
@@ -461,7 +467,7 @@ li {
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.25rem;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
 }
 
 /*working for PDF nothing, for Typora only for text*/
@@ -469,7 +475,7 @@ li p {
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.25rem;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
 }
 
 ul,
@@ -481,7 +487,7 @@ ol {
 /***************** 这里定义段落的样式 ****************/
 
 p {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     font-size: 1rem;
     line-height: 1.75;
     margin: 0.5rem 0 0.5rem 0;
@@ -508,7 +514,7 @@ blockquote {
 }
 
 blockquote p {
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 'Kaiti SC', 思源宋体 CN;
     padding: 0.25rem 0.5rem;
     font-size: 1rem;
     line-height: 1.75;
@@ -520,7 +526,7 @@ blockquote p {
 
 table {
     position: relative;
-    font-family: 'Times New Roman', 宋体;
+    font-family: 'Charter', 'Times New Roman', 思源宋体 CN;
     width: 70%;
     left: 15%;
     *border-collapse: collapse;
@@ -536,8 +542,8 @@ table thead th {
 
 /***************** 这里定义公式的样式 ****************/
 
-/* .MathJax_Display {
-    font-size: 0.9rem;
+ .MathJax_Display {
+    font-size: 0.95rem;
     margin-top: 0.5rem;
     margin-bottom: 0;
 }
@@ -550,7 +556,7 @@ p.mathjax-block,
 .mathjax-block>.code-tooltip {
     bottom: 5px;
     box-shadow: none;
-} */
+} 
 
 
 /***************** 这里定义节编号的样式 ****************/
@@ -580,7 +586,8 @@ p.mathjax-block,
 }
 
 /** put counter result into headings */
-#write h1:before {
+/* * Disabled */
+/*#write h1:before {
     white-space: pre-wrap;
     counter-increment: h1;
     content: counter(h1) "   ";
@@ -614,7 +621,7 @@ p.mathjax-block,
     white-space: pre-wrap;
     counter-increment: h6;
     content: counter(h1) "."counter(h2) "."counter(h3) "."counter(h4) "."counter(h5) "."counter(h6) "  "
-}
+}*/
 
 
 /** focus on heading */
@@ -644,6 +651,15 @@ p.mathjax-block,
 
 @media print {
 
+    html {
+        font-size: 14px;
+    }
+
+    pre {
+        page-break-inside: avoid;
+        word-wrap: break-word;
+    }
+
     /* for example: */
     .typora-export * {
         -webkit-print-color-adjust: exact;
@@ -657,7 +673,10 @@ p.mathjax-block,
         margin-right: 0mm;
     }
 
-    #write {
+    /* #write {
+        font-size: 8.5px;
+        10.5px
         max-width: 100%;
-    }
+    } 
+    */
 }
